feat: client messages endpoints
